# allmem

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: MarkdownView.tsx  Sidebar.tsx  TitleBar.tsx  Toast.tsx
src/core/: demo.ts  detector.ts  discovery.ts  extractor.ts  installer.ts  llm.ts  privacy.ts  storage.ts  sync.ts  types.ts
src/pages/: ChatPage.tsx  DashboardPage.tsx  ExperiencesPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  UserPage.tsx
src/store/: index.ts
src/styles/: globals.css
